<resources>
    <string name="app_name">WeatherConditions</string>
    <string name="add_new_weather_condition">Add new weather condition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_text">Delete</string>
    <string name="no_icon">No icon</string>
    <string name="sun">Sun</string>
    <string name="wind">Wind</string>
</resources>