<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.weatherConditionDetails.WeatherConditionsDetailsFragment">

    <EditText
        android:id="@+id/input_condition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name"
        android:hint="@string/enter_a_name"
        android:importantForAutofill="no"
        android:inputType="text"
        />


    <Spinner
        android:id="@+id/spinner_condition_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_condition_name"
        />

    <Spinner
        android:id="@+id/spinner_condition_operator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_condition_type"
        />

    <EditText
        android:id="@+id/input_condition_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_condition_operator"
        android:inputType="numberDecimal"
        tools:text="Value"
        android:hint="@string/enter_a_value"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save_weather_condition_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_weather_condition_button"
        />

    <Button
        android:id="@+id/delete_weather_condition_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_text"
        app:layout_constraintStart_toEndOf="@id/save_weather_condition_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"
        />

        <RadioGroup
            android:id="@+id/radio_group_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_condition_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:checkedButton="@id/radio_no_icon">

            <RadioButton
                android:id="@+id/radio_no_icon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/no_icon"/>
            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sun"
                android:id="@+id/radio_sun"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:id="@+id/radio_wind"/>
        </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>